<resources>
    <string name="store_picture_title">Save image</string>
    <string name="store_picture_message">Allow Ad to store image in Picture gallery?</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="create_calendar_title">Create calendar event</string>
    <string name="create_calendar_message">Allow Ad to create a calendar event?</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_notification_needs_installation_title">An application requires installation of Google Play services.</string>
    <string name="common_google_play_services_notification_needs_update_title">An application requires an update for Google Play services.</string>
    <string name="common_android_wear_notification_needs_update_text">An application requires an update to the Android Wear app.</string>
    <string name="common_google_play_services_needs_enabling_title">An application requires Google Play services to be enabled.</string>
    <string name="common_google_play_services_error_notification_requested_by_msg">Requested by %1$s</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_install_text_phone">"This app won't run without Google Play services, which are missing from your phone."</string>
    <string name="common_google_play_services_install_text_tablet">"This app won't run without Google Play services, which are missing from your tablet."</string>
    <string name="common_google_play_services_install_button">Get Google Play services</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_enable_text">"This app won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_button">Enable Google Play services</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_android_wear_update_title">Update Android Wear</string>
    <string name="common_google_play_services_update_text">"This app won't run unless you update Google Play services."</string>
    <string name="common_android_wear_update_text">"This app won't run unless you update the Android Wear app."</string>
    <string name="common_google_play_services_network_error_title">Network Error</string>
    <string name="common_google_play_services_network_error_text">A data connection is required to connect to Google Play services.</string>
    <string name="common_google_play_services_invalid_account_title">Invalid Account</string>
    <string name="common_google_play_services_invalid_account_text">The specified account does not exist on this device. Please choose a different account.</string>
    <string name="common_google_play_services_unknown_issue">Unknown issue with Google Play services.</string>
    <string name="common_google_play_services_unsupported_title">Google Play services</string>
    <string name="common_google_play_services_unsupported_text">Google Play services, which some of your applications rely on, is not supported by your device. Please contact the manufacturer for assistance.</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="wallet_buy_button_place_holder">Buy with Google</string>
    <string name="capturing_mode_selector_bidicheck_string">@string/cam_strings_application_name_txt</string>
    <string name="thermal_camera_action">shutdown</string>
    <string name="default_destination_to_save">internal</string>
    <string name="cam_strings_application_name_txt">Camera</string>
    <string name="cam_strings_shortcut_video_camera_txt">Video camera</string>
    <string name="cam_strings_scenes_auto_recog_landscape_txt">Landscape</string>
    <string name="cam_strings_scenes_auto_recog_backlight_txt">Backlight</string>
    <string name="cam_strings_scenes_auto_recog_backlight_portrait_txt">Backlight portrait</string>
    <string name="cam_strings_scenes_auto_recog_twilight_txt">Night scene</string>
    <string name="cam_strings_scenes_auto_recog_twilight_portrait_txt">Night portrait</string>
    <string name="cam_strings_scenes_auto_recog_text_txt">Document</string>
    <string name="cam_strings_scenes_auto_recog_macro_txt">Macro</string>
    <string name="cam_strings_settings_on_txt">On</string>
    <string name="cam_strings_settings_off_txt">Off</string>
    <string name="cam_strings_settings_auto_txt">Auto</string>
    <string name="cam_strings_scenes_txt">Scenes</string>
    <string name="cam_strings_scenes_landscape_txt">Landscape</string>
    <string name="cam_strings_scenes_nightmode_txt">Night</string>
    <string name="cam_strings_scenes_nightscene_txt">Night scene</string>
    <string name="cam_strings_scenes_party_txt">Party</string>
    <string name="cam_strings_scenes_sports_txt">Sports</string>
    <string name="cam_strings_scenes_beachsnow_txt">Beach and snow</string>
    <string name="cam_strings_scenes_document_txt">Document</string>
    <string name="cam_strings_resolution_txt">Resolution</string>
    <string name="cam_strings_flash_txt">Flash</string>
    <string name="cam_strings_flash_fill_flash_txt">Fill flash</string>
    <string name="cam_strings_flash_red_eye_reduc_txt">Red-eye reduction</string>
    <string name="cam_strings_light_txt">Photo light</string>
    <string name="cam_strings_self_timer_txt">Self-timer</string>
    <string name="cam_strings_self_timer_2_txt">On (2 sec.)</string>
    <string name="cam_strings_self_timer_10_txt">On (10 sec.)</string>
    <string name="cam_strings_smile_capture_txt">Smile detection</string>
    <string name="cam_strings_smile_capture_big_txt">Big smile</string>
    <string name="cam_strings_smile_capture_normal_txt">Average smile</string>
    <string name="cam_strings_smile_capture_faint_txt">Small smile</string>
    <string name="cam_strings_focus_mode_txt">Focus mode</string>
    <string name="cam_strings_focus_mode_single_af_txt">Single autofocus</string>
    <string name="cam_strings_focus_mode_multi_af_txt">Multi autofocus</string>
    <string name="cam_strings_focus_mode_infinity_txt">Infinity</string>
    <string name="cam_strings_focus_mode_face_detection_txt">Face detection</string>
    <string name="cam_strings_focus_mode_touch_focus_txt">Touch focus</string>
    <string name="cam_strings_focus_mode_macro_txt">Macro</string>
    <string name="cam_strings_exposure_level_txt">Exposure value</string>
    <string name="cam_strings_exposure_level_m20_txt">EV -2.0</string>
    <string name="cam_strings_exposure_level_m17_txt">EV -1.7</string>
    <string name="cam_strings_exposure_level_m13_txt">EV -1.3</string>
    <string name="cam_strings_exposure_level_m10_txt">EV -1.0</string>
    <string name="cam_strings_exposure_level_m07_txt">EV -0.7</string>
    <string name="cam_strings_exposure_level_m03_txt">EV -0.3</string>
    <string name="cam_strings_exposure_level_pm0_txt">EV ±0.0</string>
    <string name="cam_strings_exposure_level_p03_txt">EV +0.3</string>
    <string name="cam_strings_exposure_level_p07_txt">EV +0.7</string>
    <string name="cam_strings_exposure_level_p10_txt">EV +1.0</string>
    <string name="cam_strings_exposure_level_p13_txt">EV +1.3</string>
    <string name="cam_strings_exposure_level_p17_txt">EV +1.7</string>
    <string name="cam_strings_exposure_level_p20_txt">EV +2.0</string>
    <string name="cam_strings_white_balance_txt">White balance</string>
    <string name="cam_strings_white_balance_auto_txt">Auto</string>
    <string name="cam_strings_white_balance_incandescent_txt">Incandescent</string>
    <string name="cam_strings_white_balance_fluorescent_txt">Fluorescent</string>
    <string name="cam_strings_white_balance_day_light_txt">Daylight</string>
    <string name="cam_strings_white_balance_cloudy_txt">Cloudy</string>
    <string name="cam_strings_photometry_txt">Metering</string>
    <string name="cam_strings_photometry_center_txt">Center</string>
    <string name="cam_strings_photometry_average_txt">Average</string>
    <string name="cam_strings_photometry_spot_txt">Spot</string>
    <string name="cam_strings_image_stabilizer_txt">Image stabilizer</string>
    <string name="cam_strings_geotagging_txt">Geotagging</string>
    <string name="cam_strings_touch_capturing_txt">Touch capture</string>
    <string name="cam_strings_save_destination_txt">Data storage</string>
    <string name="cam_strings_save_destination_ims_txt">Internal storage</string>
    <string name="cam_strings_save_destination_sd_txt">SD card</string>
    <string name="cam_strings_fast_capturing_txt">Quick launch</string>
    <string name="cam_strings_video_size_mms_txt">MMS</string>
    <string name="cam_strings_video_size_full_hd_txt">Full HD</string>
    <string name="cam_strings_microphone_txt">Microphone</string>
    <string name="cam_strings_error_device_not_available_txt">Camera not available.</string>
    <string name="cam_strings_error_fatal_txt">Unknown error.</string>
    <string name="cam_strings_error_memory_full_txt">Memory full. Delete some files from SD card.</string>
    <string name="cam_strings_error_memory_unavailable_txt">SD card unavailable</string>
    <string name="cam_strings_error_message_during_voice_call_txt">Camera unavailable during a call</string>
    <string name="cam_strings_store_fail_txt">Could not save</string>
    <string name="cam_strings_memory_full_save_failed_txt">Could not save. Memory full.</string>
    <string name="cam_strings_file_delete_confirm_txt">Delete this file?</string>
    <string name="cam_strings_file_share_title_txt">Share</string>
    <string name="cam_strings_advanced_setting_geo_tag_both_off_txt">To add geotags, you have to enable GPS and/or wireless networks. Enable now?</string>
    <string name="cam_strings_do_not_show_again_txt">Do not show again</string>
    <string name="cam_3d_strings_shooting_guide_left_to_right_txt">Pan from left to right</string>
    <string name="cam_3d_strings_shooting_guide_right_to_left_txt">Pan from right to left</string>
    <string name="cam_3d_strings_shooting_guide_down_to_up_txt">Pan from down to up</string>
    <string name="cam_3d_strings_shooting_guide_up_to_down_txt">Pan from up to down</string>
    <string name="cam_3d_strings_setting_shooting_direction_right_txt">Right</string>
    <string name="cam_3d_strings_setting_shooting_direction_left_txt">Left</string>
    <string name="cam_3d_strings_setting_shooting_direction_up_txt">Up</string>
    <string name="cam_3d_strings_setting_shooting_direction_down_txt">Down</string>
    <string name="cam_3d_strings_error_too_quick_txt">Could not take picture. Please pan more slowly.</string>
    <string name="cam_3d_strings_error_too_slow_txt">Could not take picture. Please pan faster.</string>
    <string name="cam_strings_dialog_cta_location_info_txt">Retrieve location info</string>
    <string name="cam_strings_dialog_cta_access_txt">%1$s tries to</string>
    <string name="cam_strings_cta_description_txt">Allow below access request?</string>
    <string name="cam_strings_dialog_cta_wifi_mobile_data_txt">Use Wi-Fi &amp; mobile data</string>
    <string name="cam_strings_dialog_cta_turn_on_wifi_txt">Turn on Wi-Fi</string>
    <string name="cam_strings_dialog_cta_turn_on_nfc_txt">Turn on NFC</string>
    <string name="cam_strings_remember_geotag_txt">"Tag your photos and videos with the locations where they are taken. You can change this setting later from the camera's Geotagging setting."</string>
</resources>